// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography component should render component with type error 1`] = `
<div>
  <p
    class="textError"
    data-testid="test_error"
  >
    error
  </p>
</div>
`;

exports[`Typography component should render component with type header-1 1`] = `
<div>
  <h1
    class="heading1"
    data-testid="test_header-1"
  >
    header-1
  </h1>
</div>
`;

exports[`Typography component should render component with type header-2 1`] = `
<div>
  <h2
    class="heading2"
    data-testid="test_header-2"
  >
    header-2
  </h2>
</div>
`;

exports[`Typography component should render component with type text-1 1`] = `
<div>
  <p
    class="paragraphOne"
    data-testid="test_text-1"
  >
    text-1
  </p>
</div>
`;

exports[`Typography component should render component with type text-1-medium 1`] = `
<div>
  <p
    class="textOneMedium"
    data-testid="test_text-1-medium"
  >
    text-1-medium
  </p>
</div>
`;

exports[`Typography component should render component with type text-2 1`] = `
<div>
  <p
    class="textSecond"
    data-testid="test_text-2"
  >
    text-2
  </p>
</div>
`;

exports[`Typography component should render component with type text-2-medium 1`] = `
<div>
  <p
    class="textTwoMedium"
    data-testid="test_text-2-medium"
  >
    text-2-medium
  </p>
</div>
`;

exports[`Typography component should render component with type text-3 1`] = `
<div>
  <p
    class="textThird"
    data-testid="test_text-3"
  >
    text-3
  </p>
</div>
`;
